reorg prerequisites sections in KAS-KDF-HKDF spec
reorged prerequisites sections in KAS-KDF-HKDF spec to be next to each other and at the same heading level

--- a/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
@@ -1,4 +1,19 @@
 [#properties]
+
+[[prereq_algs]]
+=== Required Prerequisite Algorithms for KAS KDF Validations
+
+Some algorithm implementations rely on other cryptographic primitives. For example, IKEv2 uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same submission. ACVP provides a mechanism for specifying the required prerequisites:
+
+.Prerequisite Algorithms
+|===
+| JSON Value | Description | JSON Type | Valid Values
+
+| algorithm | a prerequisite algorithm | value | DRBG, HMAC, SHA
+| valValue | algorithm validation number | value | actual number or "same"
+| prereqAlgVal | prerequisite algorithm validation | object with algorithm and valValue properties| see above
+|===
+
 === Property Registration
 
 The {spec-algorithm} mode capabilities are advertised as JSON objects within a root "algorithm" object.
@@ -20,20 +35,6 @@ A registration *SHALL* use these properties:
 | z | The domain of values representing the min/max lengths of Z the implementation can support. | Domain | 
 | l | The length (in bits) of the largest derived keying material the implementation can produce (up to a max of 2048). | number | 
 | performMultiExpansionTests | Should multi expansion runs of the KDF be tested (in addition to the single expansion tests)? Only applicable for <<SP800-56Cr2>> | boolean | true, false 
-|===
-
-[[prereq_algs]]
-==== Prerequisite Algorithms for KAS KDF Validations
-
-Some algorithm implementations rely on other cryptographic primitives. For example, IKEv2 uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same submission. ACVP provides a mechanism for specifying the required prerequisites:
-
-.Prerequisite Algorithms
-|===
-| JSON Value | Description | JSON Type | Valid Values
-
-| algorithm | a prerequisite algorithm | value | DRBG, HMAC, SHA
-| valValue | algorithm validation number | value | actual number or "same"
-| prereqAlgVal | prerequisite algorithm validation | object with algorithm and valValue properties| see above
 |===
 
 [[fixedinfopatcon]]
