--- a/src/rsa/sections/06-test-vectors.adoc
+++ b/src/rsa/sections/06-test-vectors.adoc
@@ -13,8 +13,23 @@ The test vector set JSON schema is a multi-level hierarchy that contains meta da
 
 | acvVersion | Protocol version identifier | string
 | vsId | Unique numeric identifier for the vector set | integer
-| algorithm | The algorithm used for the test vectors | string
-| mode | The mode used for the test vectors | string
-| revision | The algorithm testing revision to use | string
-| testGroups | Array of test group JSON objects, which are defined in <<rsa_keyGen_tgjs>>, <<rsa_sigGen_tgjs>>, <<rsa_sigVer_tgjs>>, <<rsa_sigprim_tgjs>> or <<rsa_decprim_tgjs>> depending on the algorithm | array
+| algorithm | Algorithm defined in the capability exchange | string
+| mode | Mode defined in the capability exchange | string
+| revision | Protocol test revision selected | string
+| testGroups | Array of test group JSON objects, which are defined in <<rsa_keyGen_tgjs>>, <<rsa_sigGen_tgjs>>, <<rsa_sigVer_tgjs>>, <<rsa_sigprim_tgjs>> or <<rsa_decprim_tgjs>> | array
 |===
+
+An example of this would look like this
+
+[source,json]
+----
+{
+  "acvVersion": "version",
+  "vsId": 1,
+  "algorithm": "Alg1",
+  "mode": "Mode1",
+  "revision": "Revision1.0",
+  "testGroups": [ ... ]
+}
+----
+
