--- a/src/sha3/sections/05-capabilities.adoc
+++ b/src/sha3/sections/05-capabilities.adoc
@@ -7,7 +7,7 @@ Each SHA3 and SHAKE algorithm capability advertised *SHALL* be a self-contained 
 [[caps_table]]
 
 [cols="<,<,<"]
-.SHA3 1.0 and SHAKE 1.0 Algorithm Capabilities JSON Values
+.SHA3 and SHAKE Algorithm Capabilities JSON Values
 |===
 | JSON Value| Description| JSON type
 
@@ -17,6 +17,7 @@ Each SHA3 and SHAKE algorithm capability advertised *SHALL* be a self-contained 
 | inEmpty| Implementation does accept null (zero-length) messages| boolean
 | outputLen| Output length for SHAKE| domain
 | outBit| SHAKE can output bit-oriented messages| boolean
+| messageLength | The message lengths in bits supported by the IUT. The current MCT implementation requires that the digest size and 3x the digest size of the registered hash algorithm must be a valid value within the registered domain. | domain
 | performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. This property is *OPTIONAL*, and shall include the lengths in GiB being tested. Valid options are {1, 2, 4, 8}. | integer array
 |===
 
@@ -26,17 +27,21 @@ The following grid outlines which properties are *REQUIRED*, as well as all the 
 
 [[property_grid]]
 
-[cols="<,<,<,<,<,<"]
+[cols="<,<,<,<,<,<,<,<"]
 .SHA3 and SHAKE Capabilities Applicability Grid
 |===
-| algorithm| inBit| inEmpty| outputLen| outBit| performLargeDataTest
+| algorithm| revision | inBit| inEmpty| outputLen| outBit| messageLength | performLargeDataTest
 
-| SHA3-224| true, false| true, false| | | true, false
-| SHA3-256| true, false| true, false| | | true, false
-| SHA3-384| true, false| true, false| | | true, false
-| SHA3-512| true, false| true, false| | | true, false
-| SHAKE-128| true, false| true, false| {"Min": 16, "Max": 65536, "Inc": any}| true, false |
-| SHAKE-256| true, false| true, false| {"Min": 16, "Max": 65536, "Inc": any}| true, false |
+| SHA3-224| 1.0 | true, false| true, false| | | | [1, 2, 4, 8]
+| SHA3-256| 1.0 | true, false| true, false| | | | [1, 2, 4, 8]
+| SHA3-384| 1.0 | true, false| true, false| | | | [1, 2, 4, 8]
+| SHA3-512| 1.0 | true, false| true, false| | | | [1, 2, 4, 8]
+| SHA3-224| 2.0 | | | | | {"Min": 0, "Max": 65536, "Inc": any} | [1, 2, 4, 8]
+| SHA3-256| 2.0 | | | | | {"Min": 0, "Max": 65536, "Inc": any} | [1, 2, 4, 8]
+| SHA3-384| 2.0 | | | | | {"Min": 0, "Max": 65536, "Inc": any} | [1, 2, 4, 8]
+| SHA3-512| 2.0 | | | | | {"Min": 0, "Max": 65536, "Inc": any} | [1, 2, 4, 8]
+| SHAKE-128| 1.0 | true, false| true, false| {"Min": 16, "Max": 65536, "Inc": any}| true, false | |
+| SHAKE-256| 1.0 | true, false| true, false| {"Min": 16, "Max": 65536, "Inc": any}| true, false | |
 |===
 
 The following is a example JSON object advertising support for SHA3-256 for testing revision 1.0.
@@ -46,6 +51,7 @@ The following is a example JSON object advertising support for SHA3-256 for test
 {
     "algorithm": "SHA3-256",
     "revision": "1.0",
+    "mode": null,
     "inBit": true,
     "inEmpty": true,
     "performLargeDataTest": [1, 2, 4, 8]
@@ -59,6 +65,7 @@ The following is an example JSON object advertising support for SHAKE-128.
 {
     "algorithm": "SHAKE-128",
     "revision": "1.0",
+    "mode": null,
     "inBit": true,
     "inEmpty": true,
     "outBit": true,
@@ -71,20 +78,6 @@ The following is an example JSON object advertising support for SHAKE-128.
 }
 ----
 
-[cols="<,<,<"]
-.SHA3 2.0 Algorithm Capabilities JSON Values
-
-|===
-| JSON Value| Description| JSON type
-
-| algorithm| The hash algorithm and mode to be validated.| string
-| revision| The algorithm testing revision to use.| string
-| messageLength | Domain representing the message lengths supported. The current MCT implementation requires that the digest size and 3x the digest size of the registered hash algorithm must be a valid value within the registered domain. | domain
-| performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. This property is *OPTIONAL*, and shall include the lengths in GiB being tested. Valid options are {1, 2, 4, 8}. | integer array
-|===
-
-NOTE: The lengths provided in the 'performLargeDataTest' property are in gibibytes. 1GiB is equivalent to 2^30 bytes. 
-
 The following is a example JSON object advertising support for SHA3-256 for testing revision 2.0.
 
 [source, json]
@@ -92,8 +85,7 @@ The following is a example JSON object advertising support for SHA3-256 for test
 {
     "algorithm": "SHA3-256",
     "revision": "2.0",
-    "inBit": true,
-    "inEmpty": true,
+    "mode": null,
     "messageLength": [{"min": 0, "max": 65536, "increment": 1}],
     "performLargeDataTest": [1, 2, 4, 8]
 }
