--- a/src/sha3/sections/06-test-vectors.adoc
+++ b/src/sha3/sections/06-test-vectors.adoc
@@ -37,7 +37,7 @@ Each test group *SHALL* contain an array of one or more test cases.  Each test c
 
 NOTE: All properties listed in the above table are *REQUIRED* except for outLen which is only *REQUIRED* when the algorithm is SHAKE-128 or SHAKE-256.
 
-The following is an example JSON object for secure hash test vectors sent from the ACVP server to the crypto module. Notice that the single bit message is represented as "01". This complies with the little-endian nature of SHA3. All hex displayed is little-endian bit order when associated with SHA3 or any of its variations.
+The following are example JSON objects for secure hash test vectors sent from the ACVP server to the crypto module. Notice that the single bit message is represented as "01". This complies with the little-endian nature of SHA3. All hex displayed is little-endian bit order when associated with SHA3 or any of its variations.
 
 [source, json]
 ----
@@ -47,6 +47,56 @@ The following is an example JSON object for secure hash test vectors sent from t
         "vsId": 1564,
         "algorithm": "SHA3-512",
         "revision": "1.0",
+        "testGroups": [
+        {
+            "tgId": 1,
+            "testType": "AFT",
+            "tests": [
+            {
+                "tcId": 1,
+                "len": 0,
+                "msg": "00"
+            },
+            {
+                "tcId": 2,
+                "len": 1,
+                "msg": "01"
+            }]
+        },
+        {
+            "tgId": 2,
+            "testType": "MCT",
+            "tests": [
+            {
+                "tcId": 3,
+                "len": 512,
+                "msg": "30850bd984b14ff5aff18993329...",
+            }]
+        },
+        {
+            "tgId": 3,
+            "testType": "LDT",
+            "tests": [
+                {
+                    "tcId": 4,
+                    "largeMsg": {
+                        "content": "DE26",
+                        "contentLength": 16,
+                        "fullLength": 42949672960,
+                        "expansionTechnique": "repeating"
+                    }
+                }
+            ]
+        }]
+    }
+]
+
+[
+    { "acvVersion": <acvp-version> },
+    {
+        "vsId": 1565,
+        "algorithm": "SHA3-512",
+        "revision": "2.0",
         "testGroups": [
         {
             "tgId": 1,
