--- a/src/tls/sections/03-supported.adoc
+++ b/src/tls/sections/03-supported.adoc
@@ -5,4 +5,4 @@
 The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
 
 * kdf-components / tls / 1.0
-* TLVv1.2 / KDF / RFC7627
+* TLS-v1.2 / KDF / RFC7627
