--- a/src/tls/sections/05-capabilities.adoc
+++ b/src/tls/sections/05-capabilities.adoc
@@ -2,10 +2,7 @@
 [#properties]
 === Property Registration
 
-The TLS KDF mode capabilities are advertised as JSON objects within the 'capabilities_exchange' property.
-
-[#registration]
-=== Registration Example
+The TLS KDF mode capabilities are advertised as JSON objects within a root "algorithm" object.
 
 A registration *SHALL* use these properties
 
@@ -13,14 +10,26 @@ A registration *SHALL* use these properties
 |===
 | JSON Property | Description | JSON Type | Valid Values
 
-| algorithm | Name of the algorithm to be validated | string | "kdf-components", "TLSv1.2"
+| algorithm | Name of the algorithm to be validated | string | "kdf-components", "TLS-v1.2"
 | mode | Mode of the algorithm to be validated | string | "tls", "KDF"
 | revision | ACVP Test version | string | "1.0", "RFC7627"
-| tlsVersion | The version of TLS supported | array | "v1.0/1.1", "v1.2".  Note TLS v1.2 w/ extended master secret testing does not use this property.
+| tlsVersion | The version of TLS supported | array | "v1.0/1.1", "v1.2".  Note TLS v1.2 w/ extended master secret testing, i.e., TLS-v1.2 / KDF / RFC7627, does not use this property.
 | hashAlg | SHA functions supported if TLS Version "v1.2" is included in the registration | array | See <<valid-sha>>
 |===
 
 Note that the "hashAlg" field is *REQUIRED* when "v1.2" is present within the "tlsVersion" array.
+
+[#valid-sha]
+==== Valid Hash Functions
+
+The following hash functions *MAY* be advertised by an ACVP compliant client under the 'hashAlg' property
+
+* SHA2-256
+* SHA2-384
+* SHA2-512
+
+[#registration]
+=== Registration Example
 
 An example registration within an algorithm capability exchange looks like this
 
@@ -42,7 +51,7 @@ An example registration within an algorithm capability exchange looks like this
     ]
 },
 {
-    "algorithm": "TLSv1.2",
+    "algorithm": "TLS-v1.2",
     "mode": "KDF",
     "revision": "RFC7627",
     "hashAlg": [
@@ -53,11 +62,3 @@ An example registration within an algorithm capability exchange looks like this
 }
 ----
 
-[#valid-sha]
-==== Valid Hash Functions
-
-The following hash functions *MAY* be advertised by an ACVP compliant client under the 'hashAlg' property
-
-* SHA2-256
-* SHA2-384
-* SHA2-512
