--- a/src/sha3/sections/07-responses.adoc
+++ b/src/sha3/sections/07-responses.adoc
@@ -40,7 +40,7 @@ The following table describes the JSON elements for each test case object.
 
 NOTE: The 'tcId' *MUST* be included in every test case object sent between the client and the server.
 
-The following is a example JSON object for secure hash test results sent from the crypto module to the ACVP server. The group identified by tgId 1 is a group of AFTs. The group identified by tgId 2 is a group of MCTs. The group identified by tgId 3 is a group of LDTs.
+The following are examples of JSON objects for secure hash test results sent from the crypto module to the ACVP server. The group identified by tgId 1 is a group of AFTs. The group identified by tgId 2 is a group of MCTs. The group identified by tgId 3 is a group of LDTs.
 
 [source, json]
 ----
@@ -48,6 +48,55 @@ The following is a example JSON object for secure hash test results sent from th
     "vsId": 0,
     "algorithm": "SHA3-224",
     "revision": "1.0",
+    "testGroups": [
+        {
+            "tgId": 1,
+            "tests": [
+                {
+                    "tcId": 1,
+                    "md": "D14A028C2A3A2BC9476102BB288234C415A2B01F828EA62AC5B3E42F"
+                },
+                {
+                    "tcId": 2,
+                    "md": "D14A028C2A3A2BC9476102BB288234C415A2B01F828EA62AC5B3E42F"
+                }
+            ]
+        },
+        {
+            "tgId": 2,
+            "tests": [
+                {
+                    "tcId": 1028,
+                    "resultsArray": [
+                        {
+                            "md": "E82B1FA3D510C2E423D03CEDF01F66C995CDD573EB63D5A33FDAE640"
+                        },
+                        {
+                            "md": "00179AE4CE57DCBD156B981A414370B5089FA8E1098A05443DF3CD62"
+                        },
+                        {
+                            "md": "8F6C7F546940352613E8389D4F4B87473A57CACD7E289A27E4F51965"
+                        }
+                    ]
+                }
+            ]
+        },
+        {
+            "tgId": 3,
+            "tests": [
+                {
+                    "tcId": 1029,
+                    "md": "E4F8B44B32F5A25D1F4784601BF095CF5F7C6F4E9EAA1005AD19F09A"
+                }
+            ]
+        }
+    ]
+}
+
+{
+    "vsId": 0,
+    "algorithm": "SHA3-224",
+    "revision": "2.0",
     "testGroups": [
         {
             "tgId": 1,
