--- a/src/tls/sections/06-test-vectors.adoc
+++ b/src/tls/sections/06-test-vectors.adoc
@@ -10,20 +10,22 @@ The testGroups element at the top level in the test vector JSON object is an arr
 
 | tgId | Test group identifier | integer
 | testType | Test operations to be performed | string
-| tlsVersion | The version of TLS used in the test group. Not included for RFC7627 testing. | string
+| tlsVersion | The version of TLS used in the test group. Not included for TLS-v1.2 / KDF / RFC7627 testing. | string
 | hashAlg | SHA version used | string
 | preMasterSecretLength | Pre-master secret length in bits | integer
 | keyBlockLength | Key block length in bits | integer
 | tests | Array of individual test cases | array
 |===
 
-The 'tgId', 'testType' and 'tests' objects *MUST* appear in every test group element communicated from the server to the client as a part of a prompt. Other properties are dependent on which 'testType' (see <<testtypes>>) the group is addressing.
+The 'tgId', 'testType' and 'tests' objects *MUST* appear in every test group element communicated from the server to the client as a part of a prompt. 
 
 === Test Cases
 
+==== Revision 1.0 Test Cases
+
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each {spec-algorithm} test vector.
 
-.Test Case JSON Object
+.1.0 Test Case JSON Object
 |===
 | JSON Value | Description | JSON Type
 
@@ -48,18 +50,66 @@ Here is an abbreviated yet fully constructed example of the prompt.
     "testGroups": [
         {
             "tgId": 1,
-            "tlsVersion": "v1.0/1.1",
             "hashAlg": "SHA-1",
-            "preMasterSecretLength": 384,
+            "tlsVersion": "v1.0/1.1",
             "keyBlockLength": 832,
+            "preMasterSecretLength": 384,
+            "testType": "AFT",
             "tests": [
                 {
                     "tcId": 1,
+                    "preMasterSecret": "2F0D26CC2487169D83D9...",
                     "clientHelloRandom": "00D5EDFC0A7D8B0913...",
                     "serverHelloRandom": "14D06FC8F2792762BA...",
                     "clientRandom": "DDFB77CB1304A0541C6CC07...",
-                    "serverRandom": "D59EB4E444005709409C572...",
-                    "preMasterSecret": "2F0D26CC2487169D83D9..."
+                    "serverRandom": "D59EB4E444005709409C572..."
+
+                }
+            ]
+        }
+    ]
+}
+----
+
+==== Revision RFC7627 Test Cases
+
+Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each {spec-algorithm} test vector.
+
+.RFC7627 Test Case JSON Object
+|===
+| JSON Value | Description | JSON Type
+
+| tcId | Test case idenfitier | integer
+| preMasterSecret | Pre-master secret value | hex
+| sessionHash | the hash value of the concatenated handshake messages | hex
+| serverRandom | Server random value | hex
+| clientRandom | Client random value | hex
+|===
+
+Here is an abbreviated yet fully constructed example of the prompt.
+
+[align=left,alt=,type=]
+[source, json]
+----
+{
+    "vsId": 1,
+    "algorithm": "TLS-v1.2",
+    "mode": "KDF",
+    "revision": "RFC7627",
+    "testGroups": [
+        {
+            "tgId": 1,
+            "hashAlg": "SHA2-256",
+            "keyBlockLength": 1024,            
+            "preMasterSecretLength": 384,
+            "testType": "AFT",
+            "tests": [
+                {
+                    "tcId": 1,
+                    "preMasterSecret": "2F0D26CC2487169D83D9...",
+                    "sessionHash": "00D5EDFC0A7D8B0913...",
+                    "clientRandom": "DDFB77CB1304A0541C6CC07...",
+                    "serverRandom": "D59EB4E444005709409C572..."
                 }
             ]
         }
