updates for ACVP-Server 140
-update the definitions for the "preHash" parameter
-corrected a note that states when the 'context' parameter appears in signature generation test vectors
-removed duplicate "Test Vectors" section
-small misc. wording changes

--- a/src/draft-celi-acvp-eddsa.adoc
+++ b/src/draft-celi-acvp-eddsa.adoc
@@ -54,7 +54,7 @@ include::eddsa/sections/05-eddsa-siggen-capabilities.adoc[]
 
 include::eddsa/sections/05-eddsa-sigver-capabilities.adoc[]
 
-include::common/common-sections/06-test-vector-intro.adoc[]
+//include::common/common-sections/06-test-vector-intro.adoc[]
 
 include::eddsa/sections/06-test-vectors.adoc[]
 
