--- a/src/eddsa/sections/05-eddsa-siggen-capabilities.adoc
+++ b/src/eddsa/sections/05-eddsa-siggen-capabilities.adoc
@@ -14,8 +14,8 @@ The complete list of EDDSA signature generation capabilities may be advertised b
 | JSON Value | Description | JSON type | Valid Values
 
 | curve | The curve names supported for the IUT in sigGen | array | Any non-empty subset of {"ED-25519", "ED-448"}
-| pure | If the IUT supports normal 'pure' sigGen functionality | bool | true/false
-| preHash | If the IUT supports accepting a preHashed message to sign | bool | true/false
+| pure | If the IUT supports normal 'pure' EdDSA signature generation functionality | bool | true/false
+| preHash | If the IUT supports Prehash EdDSA, i.e., HashEdDSA, signature generation functionality | bool | true/false
 |===
 
 The following is an example
