--- a/src/eddsa/sections/06-eddsa-sigver-test-vectors.adoc
+++ b/src/eddsa/sections/06-eddsa-sigver-test-vectors.adoc
@@ -1,7 +1,7 @@
 [[EDDSA_sigVer_tgjs]]
 === EDDSA sigVer Test Groups JSON Schema
 
-The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.
+The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the JSON elements of the Test Group JSON object.
 
 The test group for EDDSA / sigVer / 1.0 is as follows:
 
@@ -12,7 +12,7 @@ The test group for EDDSA / sigVer / 1.0 is as follows:
 
 | tgId | The test group identifier | integer
 | curve | The curve type used for the test vectors | string
-| prehash | Whether or not the message is pre-hashed entering the signature function | boolean
+| prehash | Whether or not Prehash EdDSA/HashEdDSA (vs normal/'pure' EdDSA) should be used for the test vectors | boolean
 | testType | The testType for the group | string
 | tests | Array of individual test vector JSON objects, which are defined in <<EDDSA_sigVer_tvjs>> | array
 |===
