--- a/src/eddsa/sections/06-eddsa-keygen-test-vectors.adoc
+++ b/src/eddsa/sections/06-eddsa-keygen-test-vectors.adoc
@@ -1,7 +1,7 @@
 [[EDDSA_keyGen_tgjs]]
 === EDDSA keyGen Test Groups JSON Schema
 
-The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.
+The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. For instance, all test vectors that use the same key size would be grouped together. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the JSON elements of the Test Group JSON object.
 
 The test group for EDDSA / keyGen / 1.0 is as follows:
 
@@ -47,6 +47,7 @@ The following is an example of a prompt for EDDSA / keyGen / 1.0
         "revision": "1.0",
         "testGroups": [
             {
+                "tgId": 1,
                 "curve": "ED-25519",
                 "secretGenerationMode": "extra bits",
                 "testType": "AFT",
