--- a/src/eddsa/sections/06-test-vectors.adoc
+++ b/src/eddsa/sections/06-test-vectors.adoc
@@ -1,7 +1,7 @@
 [[tgjs]]
 == Test Vectors
 
-The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation. A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client. Each test vector set represents an individual EDDSA function. This section describes the JSON schema for a test vector set used with EDDSA algorithms.
+The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation. A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client. Each test vector set represents an individual EdDSA function. This section describes the JSON schema for a test vector set used with EdDSA algorithms.
 
 The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client.The following table describes the JSON elements at the top level of the hierarchy.
 
@@ -12,8 +12,22 @@ The test vector set JSON schema is a multi-level hierarchy that contains meta da
 
 | acvVersion | Protocol version identifier | string
 | vsId | Unique numeric identifier for the vector set | string
-| algorithm | EDDSA | string
-| mode | The EDDSA mode used for the test vectors | string
-| revision | The algorithm testing revision to use | string
+| algorithm | Algorithm defined in the capability exchange | string
+| mode | Mode defined in the capability exchange | string
+| revision | Protocol test revision selected | string
 | testGroups | Array of test group JSON objects, which are defined in <<EDDSA_keyGen_tgjs>>, <<EDDSA_keyVer_tgjs>>, <<EDDSA_sigGen_tgjs>>, and <<EDDSA_sigVer_tgjs>> | array
 |===
+
+An example of this would look like this
+
+[source,json]
+----
+{
+  "acvVersion": "version",
+  "vsId": 1,
+  "algorithm": "Alg1",
+  "mode": "Mode1",
+  "revision": "Revision1.0",
+  "testGroups": [ ... ]
+}
+----
