--- a/src/kas/sp800-56ar3/ecc/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/06-test-vectors.adoc
@@ -37,7 +37,7 @@ Describes the KDF configuration for use under the test group.
 | JSON Value| Description| JSON Type| Optional
 
 | kdfType| The type of KDF to use for the group. | value - oneStep, oneStepNoCounter, twoStep| No
-| satMethod|  The strategy used for salting. | value - default (all 00s), random| No
+| saltMethod|  The strategy used for salting. | value - default (all 00s), random| No
 | fixedInfoPattern| The pattern used for constructing the fixedInfo. | value - See <<fixedinfopatcon>>.| No
 | fixedInfoEncoding| The pattern used for constructing the fixedInfo. | value - See <<fixedinfopatcon>>.| No
 | auxFunction| The auxiliary function used in the KDF.| value - See <<auxfunc>>. | Not optional for OneStepKdf.
