SHAKE update for ACVP 1240
-updated the SHAKE spec to list the max values for 'len' for SHAKE

--- a/src/sha3/sections/06-test-vectors.adoc
+++ b/src/sha3/sections/06-test-vectors.adoc
@@ -37,6 +37,8 @@ Each test group *SHALL* contain an array of one or more test cases.  Each test c
 
 NOTE: All properties listed in the above table are *REQUIRED* except for outLen which is only *REQUIRED* when the algorithm is SHAKE-128 or SHAKE-256.
 
+NOTE: The maximum value for SHAKE-128 for 'len' is 65,904 bits when the inBit parameter is set to true in the capabilities registration and 66,240 bits when it is set to false. The maximum value for SHAKE-256 for 'len' is 66,428 bits when the inBit parameter is set to true in the capabilities registration and 65,752 bits when it is set to false.
+
 The following are example JSON objects for secure hash test vectors sent from the ACVP server to the crypto module. Notice that the single bit message is represented as "01". This complies with the little-endian nature of SHA3. All hex displayed is little-endian bit order when associated with SHA3 or any of its variations.
 
 [source, json]
