fix SP800-106 formatting issue in dsa spec
fixed formatting of SP800-106 references in the dsa spec that were causing the metanorma build process to fail

--- a/src/dsa/sections/06-siggen-test-vectors.adoc
+++ b/src/dsa/sections/06-siggen-test-vectors.adoc
@@ -18,7 +18,7 @@ The test group for DSA / sigGen / * is as follows:
 | l | Length in bits of prime modulus p | integer
 | n | Length in bits of prime divisor q | integer
 | hashAlg | The hash algorithm used in the test group | string
-| conformance | Signifies all test cases within the group should utilize random message hashing as described in <SP800-106>>. | string
+| conformance | Signifies all test cases within the group should utilize random message hashing as described in <<SP800-106>>. | string
 | tests | Array of individual test vector JSON objects, which are defined in <<dsa_sigGen_tvjs>> | array
 |===
 
