--- a/src/dsa/sections/06-sigver-test-vectors.adoc
+++ b/src/dsa/sections/06-sigver-test-vectors.adoc
@@ -21,7 +21,7 @@ The test group for DSA / sigVer / * is as follows:
 | q | Domain parameter Q | hex
 | g | Domain parameter G | hex
 | hashAlg | The hash algorithm used in the test group | string
-| conformance | Signifies all test cases within the group should utilize random message hashing as described in <SP800-106>>. | string
+| conformance | Signifies all test cases within the group should utilize random message hashing as described in <<SP800-106>>. | string
 | tests | Array of individual test vector JSON objects, which are defined in <<dsa_sigVer_tvjs>> | array
 |===
 
@@ -37,7 +37,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
 | message | The message used to generate signature or verify signature | hex
-| randomValue | The random value to be used as an input into the message randomization function as described in <SP800-106>>. | hex
+| randomValue | The random value to be used as an input into the message randomization function as described in <<SP800-106>>. | hex
 | randomValueLen | The random value's bit length. | integer
 | r | The signature component R | hex
 | s | The signature component S | hex
