--- a/src/dsa/sections/07-siggen-responses.adoc
+++ b/src/dsa/sections/07-siggen-responses.adoc
@@ -26,7 +26,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 | tcId | The test case identifier | integer
 | r | The signature component R | hex
 | s | The signature component S | hex
-| randomValue | The random value to be used as an input into the message randomization function as described in <SP800-106>>. | hex
+| randomValue | The random value to be used as an input into the message randomization function as described in <<SP800-106>>. | hex
 | randomValueLen | The random value's bit length. | integer
 |===
 
