first round of updates
Table 9
-updated table to indicate that the 'payloadLen' parameter is not applicable to FF1 and FF3-1
Test Groups section
-small wording updates
-Table 16
-added entries  for AES-CBC-CS2, AES-CBC-CS3, AES-FF1 and AES-FF3-1
-updated table to indicate that the 'payloadLen' parameter is not required for CS1-CS3

--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -159,9 +159,9 @@ The following grid outlines which properties are *REQUIRED*, as well as the poss
 | AES-CBC-CS3| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | | 
 | AES-CTR| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 1, "Max": 128, "Inc": any}| | true, false| true, false | true, false | |
 | TDES-CTR| "1.0"| ["encrypt", "decrypt"]| | {"Min": 1, "Max": 64, "Inc": any}| [1, 2] Note: 2 is only available for decrypt operations| true, false| true, false| true, false | |
-| AES-FF1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | Domain 0-128 bits, mod 8. | At least one set
+| AES-FF1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| | | | | | Domain 0-128 bits, mod 8. | At least one set
 of capabilities is required. See <<property_grid_ff_capabilities>> 
-| AES-FF3-1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | | At least one set of capabilities is required. See <<property_grid_ff_capabilities>> 
+| AES-FF3-1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| | | | | | | At least one set of capabilities is required. See <<property_grid_ff_capabilities>> 
 |===
 
 NOTE: keyingOption 2 *SHALL* only be available for decrypt operations.
