--- a/src/symmetric/sections/06-test-vectors.adoc
+++ b/src/symmetric/sections/06-test-vectors.adoc
@@ -2,7 +2,7 @@
 [[tgjs]]
 === Test Groups
 
-Test vector sets *MUST* contain one or many test groups, each sharing similar properties.  For instance, all test vectors that use the same key size would be grouped together. The testGroups element at the top level of the test vector JSON object *SHALL* be the array of test groups. The Test Group JSON object *MUST* contain meta-data that applies to all test cases within the group.  The following table describes the JSON elements that *MAY* appear from the server in the Test Group JSON object:
+Test vector sets *MUST* contain one or more test groups, each sharing similar properties.  For instance, all test vectors that use the same key size would be grouped together. The testGroups element at the top level of the test vector JSON object *SHALL* be the array of test groups. The Test Group JSON object *MUST* contain meta-data that applies to all test cases within the group.  The following table describes the JSON elements that *MAY* appear from the server in the Test Group JSON object:
 
 [cols="<,<,<"]
 [[vs_tg_table]]
@@ -32,7 +32,6 @@ Some properties *MUST* appear in the prompt file from the server for every testG
 
 * tgId
 * direction
-* payloadLen
 * testType
 * tests
 
@@ -108,11 +107,15 @@ The following grid defines when each property is *REQUIRED* from a server for th
 |===
 | algorithm| revision| keyLen| keyingOption| incremental| overflow| tweakMode| payloadLen
 
-| ACVP-AES-CBC-CS1| "1.0"| 128, 192, 256| | | | | within domain
+| ACVP-AES-CBC-CS1| "1.0"| 128, 192, 256| | | | | 
+| ACVP-AES-CBC-CS2| "1.0"| 128, 192, 256| | | | | 
+| ACVP-AES-CBC-CS3| "1.0"| 128, 192, 256| | | | | 
 | ACVP-AES-CTR| "1.0"| 128, 192, 256| | true, false| true, false| |
 | ACVP-AES-XTS| "1.0"| 128, 256| | | | "hex", "number"| within domain
-| ACVP-AES-XTS| "2.0"| 128, 256| | | | "hex", "number"|
+| ACVP-AES-XTS| "2.0"| 128, 256| | | | "hex", "number"| 
 | ACVP-TDES-CTR| "1.0"| | 1, 2| true, false| true, false| |
+| ACVP-AES-FF1| "1.0"| 128, 192, 256| | | | | 
+| ACVP-AES-FF3-1| "1.0"| 128, 192, 256| | | | | 
 |===
 
 NOTE: The particular values of a domain are *REQUIRED* to be an integer element of the domain present in the registration used. The ACVP server *MAY* select predetermined or random values with particular features (ex. on a block boundary, or not on a block boundary) within the domain the client provided in the registration.
