symmetric spec update for ACVP-1244
-added a table and a note to the Test Cases section to identify which algorithms include the payloadLen parameter as part of the test case JSON object

--- a/src/symmetric/sections/06-test-vectors.adoc
+++ b/src/symmetric/sections/06-test-vectors.adoc
@@ -150,3 +150,21 @@ Each test group *SHALL* contain an array of one or more test cases. Each test ca
 |===
 
 NOTE: The applicability of each test case property is dependent on the test group and test vector (algorithm) properties. Each test type within the test group requires specific operations to be performed and thus specific data returned to the server. Consult <<testtypes>> for more information. The tcId property *MUST* appear within every test case sent to and from the server.
+
+The following grid identifies the algorithms whose test case JSON objects will contain the 'payloadLen' property and the valid values a servery *MAY* use.
+
+[cols="<,<,<,<"]
+[[vs_payloadlen_table]]
+.Applicability of the 'payloadLen' Property
+
+|===
+| Algorithm | Revision | Applicability | payloadLen
+| ACVP-AES-CBC-CS1 | "1.0" | for all test cases | within domain (see <<property_grid_misc>>)
+| ACVP-AES-CBC-CS2 | "1.0" | for all test cases | within domain (see <<property_grid_misc>>)
+| ACVP-AES-CBC-CS3 | "1.0" | for all test cases | within domain (see <<property_grid_misc>>)
+| ACVP-AES-CTR | "1.0" | for the test cases of some test groups, but not others | within domain (see <<property_grid_misc>>)
+| ACVP-AES-XTS | "2.0" | for all test cases | within domain (see <<property_grid_xts>>)
+|===
+
+NOTE: <<vs_payloadlen_table>> identifies the algorithms for which the 'payloadLen' property will be present as part of the test case JSON objects. Please also be aware that other algorithms include the 'payloadLen' property as part of the test group JSON object. For more information, see <<property_grid_prompt_auth>>, <<property_grid_prompt_kw>>, and <<property_grid_prompt_misc>>.
+
