symmetric spec Table 18 update
added AES-CFB1 to Table 18

--- a/src/symmetric/sections/06-test-vectors.adoc
+++ b/src/symmetric/sections/06-test-vectors.adoc
@@ -163,6 +163,7 @@ The following grid identifies the algorithms whose test case JSON objects will c
 | ACVP-AES-CBC-CS1 | "1.0" | for all test cases | within domain (see <<property_grid_misc>>)
 | ACVP-AES-CBC-CS2 | "1.0" | for all test cases | within domain (see <<property_grid_misc>>)
 | ACVP-AES-CBC-CS3 | "1.0" | for all test cases | within domain (see <<property_grid_misc>>)
+| ACVP-AES-CFB1 | "1.0" | for all test cases | 1
 | ACVP-AES-CTR | "1.0" | for the test cases of some test groups, but not others | within domain (see <<property_grid_misc>>)
 | ACVP-AES-XTS | "2.0" | for all test cases | within domain (see <<property_grid_xts>>)
 |===
