spec updates for ACVP-1246, acvp spec range update
ACVP Spec Update:
-updated the description of the range data type to include the "inc" shorthand for "increment" and the default value of 1 that is used when no increment is specified.

ACVP-1246 Updates:
-updated the MCT pseudo code for cSHAKE, ParallelHash, and TupleHash to ensure that the OutputLen values generated honor the OutLenIncrement provided by the tester.
-added information for valid values for Increment for msgLen and outputLen for Table 3.

see https://github.com/usnistgov/ACVP/issues/1246

--- a/src/protocol/sections/16-customspec.adoc
+++ b/src/protocol/sections/16-customspec.adoc
@@ -33,7 +33,7 @@ When a "value" is provided along with a "valueLen", the "valueLen" *MUST* be con
 
 === Range
 
-The Range object can be used to convey a range of values. It contains its own set of properties made up of "min", "max", and "increment".
+The Range object can be used to convey a range of values. It contains its own set of properties made up of "min", "max", and "increment". "inc" may be used as a shorthand for "increment." If the "increment" property is omitted, a default value of 1 *SHALL* be used.
 
 ==== Range JSON examples
 
