--- a/src/xof/sections/05-capabilities.adoc
+++ b/src/xof/sections/05-capabilities.adoc
@@ -8,7 +8,7 @@ The XOF capabilities *MUST* be advertised as JSON objects within the 'algorithms
 
 Each XOF algorithm capability advertised *SHALL* be a self-contained JSON object.
 
-Each algorithm capability advertised is a self-contained JSON object.  The following JSON values are used for hash algorithm capabilities:
+Each algorithm capability advertised is a self-contained JSON object.  The following JSON values are used for XOF algorithm capabilities:
 
 [cols="<,<,<"]
 [[caps_table]]
@@ -35,12 +35,14 @@ The following grid outlines which properties are *REQUIRED*, as well as all the 
 |===
 | algorithm | xof | hexCustomization | msgLen | outputLen | keyLen | macLen | blockSize
 
-| cSHAKE-128 | | | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | | |
-| cSHAKE-256 | | | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | | |
-| KMAC-128 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 0, Max: 65536} | {Min: 128, Max: 524288, Inc: 8} | {Min: 32, Max: 65536, Inc: 8} |
-| KMAC-256 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 0, Max: 65536} | {Min: 128, Max: 524288, Inc: 8} | {Min: 32, Max: 65536, Inc: 8} |
-| ParallelHash-128 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | | | {Min: 1, Max: 128, Inc: 1}
-| ParallelHash-256 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | | | {Min: 1, Max: 128, Inc: 1}
-| TupleHash-128 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | | |
-| TupleHash-128 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | | |
+| cSHAKE-128 | | | {Min: 0, Max: 65536, Increment: any} | {Min: 16, Max: 65536, Increment: any} | | |
+| cSHAKE-256 | | | {Min: 0, Max: 65536, Increment: any} | {Min: 16, Max: 65536, Increment: any} | | |
+| KMAC-128 | [true, false] | true, false | {Min: 0, Max: 65536, Increment: any} | {Min: 0, Max: 65536, Increment: any} | {Min: 128, Max: 524288, Increment: 8} | {Min: 32, Max: 65536, Increment: 8} |
+| KMAC-256 | [true, false] | true, false | {Min: 0, Max: 65536, Increment: any} | {Min: 0, Max: 65536, Increment: any} | {Min: 128, Max: 524288, Increment: 8} | {Min: 32, Max: 65536, Increment: 8} |
+| ParallelHash-128 | [true, false] | true, false | {Min: 0, Max: 65536, Increment: any} | {Min: 16, Max: 65536, Increment: any} | | | {Min: 1, Max: 128, Increment: 1}
+| ParallelHash-256 | [true, false] | true, false | {Min: 0, Max: 65536, Increment: any} | {Min: 16, Max: 65536, Increment: any} | | | {Min: 1, Max: 128, Increment: 1}
+| TupleHash-128 | [true, false] | true, false | {Min: 0, Max: 65536, Increment: any} | {Min: 16, Max: 65536, Increment: any} | | |
+| TupleHash-128 | [true, false] | true, false | {Min: 0, Max: 65536, Increment: any} | {Min: 16, Max: 65536, Increment: any} | | |
 |===
+
+NOTE: For cSHAKE, ParallelHash, and TupleHash, the value for the outputLen property must consist of a single range object. This restriction is made to simplify the implementation of the Monte Carlo Tests for these algorithms (see <<MC_test>>).
