fix conditioning components spec typo
fix alignment issue in Table 2

--- a/src/conditioning-components/sections/05-capabilities.adoc
+++ b/src/conditioning-components/sections/05-capabilities.adoc
@@ -17,7 +17,7 @@ The following ConditioningComponent / AES-CBC-MAC / SP800-90B and ConditioningCo
 | JSON Value | Description | JSON type | Valid Values
 
 | algorithm | The algorithm to be validated | string | "ConditioningComponent"
-| mode | The specific conditioning component to be validated | "AES-CBC-MAC" or "BlockCipher_DF"
+| mode | The specific conditioning component to be validated | string | "AES-CBC-MAC" or "BlockCipher_DF"
 | revision | The algorithm testing revision to use | string | "SP800-90B"
 | keyLen | The length of keys supported in bits | array | [128, 192, 256]
 | payloadLen | The lengths in bits supported by the IUT | domain | [{"min": 8, "max": 65536, "inc": 8}]
