conditioning components update
fixed an alignment issue in table 3

--- a/src/conditioning-components/sections/05-capabilities.adoc
+++ b/src/conditioning-components/sections/05-capabilities.adoc
@@ -82,7 +82,7 @@ The following ConditioningComponent / Hash_DF / SP800-90B capabilities *MAY* be 
 | JSON Value | Description | JSON type | Valid Values
 
 | algorithm | The algorithm to be validated | string | "ConditioningComponent"
-| mode | The specific conditioning component to be validated | "Hash_DF"
+| mode | The specific conditioning component to be validated | string | "Hash_DF"
 | revision | The algorithm testing revision to use | string | "SP800-90B"
 | capabilities | An array of supported capability objects | array of objects | Each element in the array is made of exactly one 'payloadLen' field and one 'hashAlg' field
 | payloadLen | The lengths in bits supported by the IUT | domain | [{"min": 1, "max": 65536, "inc": 1}]
