fix KAS-ECC 1.0 mode typo
-fixed mode typos for KAS-ECC / CDH-Component / 1.0

--- a/src/kas/sp800-56ar2/ecc/sections/03-supported.adoc
+++ b/src/kas/sp800-56ar2/ecc/sections/03-supported.adoc
@@ -5,4 +5,4 @@
 The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
 
 * KAS-ECC / null / 1.0
-* KAS-ECC / Component / 1.0
+* KAS-ECC / CDH-Component / 1.0
