KAS-ECC FFC 1.0 Component updates
KAS-ECC 1.0:
-re-listed "Component" as an optional value for mode

KAS-FFC 1.0:
-listed KAS-FFC / Component / 1.0 in the Supported KAS-FFCs section

--- a/src/kas/sp800-56ar2/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar2/ecc/sections/05-capabilities.adoc
@@ -42,7 +42,7 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 | JSON Value| Description| JSON type| Valid Values| Optional
 
 | algorithm| The algorithm under test| string | "KAS-ECC"| No
-| mode| The algorithm mode.| string | "CDH-Component"| Yes
+| mode | The algorithm mode.| string | null, "Component", or "CDH-Component"| Yes
 | revision| The algorithm testing revision to use.| string | "1.0"| No
 | prereqVals| Prerequisite algorithm validations| array of prereqAlgVal objects| See <<prereq_algs>>| No
 | function| Type of function supported| array| See <<supported_functions>>| No
