--- a/src/kas/sp800-56ar2/ffc/sections/03-supported.adoc
+++ b/src/kas/sp800-56ar2/ffc/sections/03-supported.adoc
@@ -5,3 +5,4 @@
 The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
 
 * KAS-FFC / null / 1.0
+* KAS-FFC / Component / 1.0
