KAS-KC spec alg/rev update
-correct algorithm, revision valid values for Table 4

--- a/src/kas/kc/05-capabilities.adoc
+++ b/src/kas/kc/05-capabilities.adoc
@@ -39,8 +39,8 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 |===
 | JSON Value| Description| JSON type| Valid Values| Optional
 
-| algorithm| The algorithm under test| value| KAS-FFC| No
-| revision| The algorithm testing revision to use.| value| "Sp800-56Ar3"| No
+| algorithm| The algorithm under test| string | "KAS-KC"| No
+| revision| The algorithm testing revision to use.| string | "Sp800-56"| No
 | prereqVals| Prerequisite algorithm validations| array of prereqAlgVal objects| See <<prereq_algs>>| No
 | kasRole| Roles supported for key agreement| array| initiator and/or responder| No
 | keyConfirmationMethod| The KeyConfirmation capabilities supported.| object| <<keyconfirmmethod>>| Yes
