add supports48BitSrtcpIndex parameter to srtp kdf
-add the supports48BitSrtcpIndex parameter to the srtp kdf spec capabilities registration. supports48BitSrtcpIndex = true indicates that the IUT supports 48-bit (vs 32-bit) SRTCP indexes.
-see  https://github.com/usnistgov/ACVP/issues/950

--- a/src/srtp/sections/05-capabilities.adoc
+++ b/src/srtp/sections/05-capabilities.adoc
@@ -8,17 +8,20 @@ A registration *SHALL* use these properties
 
 .SRTP KDF Mode Capabilities JSON Values
 |===
-| JSON Value | Description | JSON Type | Valid Values
+| JSON Value | Description | JSON Type | Valid Values | Optional
 
-| algorithm | Name of the algorithm to be validated | string | "kdf-components"
-| mode | Mode of the algorithm to be validated | string | "srtp"
-| revision | ACVP Test version | string | "1.0"
-| aesKeyLength | AES Key sizes the IUT supports | array | Any non-empty subset of {128, 192, 256}
-| supportsZeroKdr | Whether or not the IUT supports an empty KDR | boolean | true, false
-| kdrExponent | Key Derivation Rate as an exponent of 2 | array | [0, .., 24]
+| algorithm | Name of the algorithm to be validated | string | "kdf-components" | No
+| mode | Mode of the algorithm to be validated | string | "srtp" | No
+| revision | ACVP Test version | string | "1.0" | No
+| aesKeyLength | AES Key sizes the IUT supports | array | Any non-empty subset of {128, 192, 256} | No
+| supportsZeroKdr | Whether or not the IUT supports an empty KDR | boolean | true, false | No 
+| kdrExponent | Key Derivation Rate as an exponent of 2 | array | [0, .., 24] | Yes (if none of the valid values are supported)
+| supports48BitSrtcpIndex | Whether or not the IUT implements a 48-bit SRTCP index | boolean | true, false | Yes
 |===
 
 NOTE: In the "kdrExponent" array a supported value of 3 corresponds to an actual KDF of 2\^3 or "04" in hex, as the third least significant bit is a 1. If no elements of this array are supported, then it *MAY* be excluded. If this is the case, then the IUT *MUST* support an empty KDR via "supportsEmptyKdr" set to true.
+
+NOTE: When the "supports48BitSrtcpIndex" property is present and set to true, the IUT will be tested with 48-bit SRTCP indexes in line with IETF RFC Errata ID 3712. When "supports48BitSrtcpIndex" is ommited or set to false, the IUT will be tested with 32-bit SRTCP indexes as per the original RFC 3711.
 
 An example registration within an algorithm capability exchange looks like this.
 
