symmetric spec formatting fix
fixed a formatting error in Table 3 of the symmetric spec that caused the capabilities parameter to not display

--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -50,7 +50,7 @@ text. | domain
 | incrementalCounter| Indicates if the implementation increments the counter (versus decrementing the counter)| boolean
 | performCounterTests| Indicates if the implementation can perform the Counter tests which check for an always increasing (or decreasing) counter value| boolean
 | tweakLen | The domain of values allowed for ACVP-AES-FF1's tweak value. Allowed range is 0-128 bits mod 8. See <<property_grid_misc>> | domain
-An array of objects that describes an IUT's capabilities as they pertain to ACVP-AES-FF1 and ACVP-AES-FF3-1. See <<property_grid_misc>> and <<property_grid_ff_capabilities>> | Array of Objects
+| capabilities | An array of objects that describes an IUT's capabilities as they pertain to ACVP-AES-FF1 and ACVP-AES-FF3-1. See <<property_grid_misc>> and <<property_grid_ff_capabilities>> | Array of Objects
 | dataUnitLen | The length of the ACVP-AES-XTS data unit | domain
 | dataUnitLenMatchesPayload | Whether or not the length of the data unit always matches the length of the payload in ACVP-AES-XTS | boolean
 |===
